2013-08-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/qtdensity.h: Added a few more explicit #include
	statements which Qt 5.1 now appears to require -- with thanks to
	Spencer Behling for the patch
	* inst/examples/qt/qtdensity.h: Moved one #include to header file

2013-04-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/armadillo/rinside_arma0.cpp: Reverse order of
	includes so that RcppArmadillo.h is included before RInside
	* inst/examples/armadillo/rinside_arma1.cpp: Idem

2013-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RInside.h: Set default value of loadRcpp to true

	* src/RInside.cpp: Assign R's global env. only after R has been
	loaded, also load Rcpp unconditionally

2013-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/mpi/rinside_mpi_sample4.cpp: Added new example
	contributed by Nicholas Pezolano and Martin Morgan

2012-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.10

	* src/RInside.cpp: Set R_CStackLimit to -1 to block stack checking,
	place assignment after initialization of embedded R instance (on all
	platforms but Windows which does not have R_CStackLimit)
	* inst/include/RInsideCommon.h: Updated to ensure R_CStackLimit is
	defined, added a few more #include statements here

	* inst/examples/threads/boostEx.cpp: New example directory for simple
	multi-threaded use demo building on a simple Boost mutex example
	* cleanup: Also clean new example directory threads/
	* doxyfile: Added new example directory threads/

	* inst/examples/qt/qtdensity.pro: Corrected link order statement
	permitting use of example on Windows as well as Linux / OS X

	* inst/examples/standard/rinside_sample9.cpp: Disabled as passing
	external C/C++ function through simplified interface currently borked
	* inst/examples/standard/rinside_module_sample0.cpp: Idem

2012-11-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample11.cpp: added include for