@@ -29,7 +29,7 @@
 class RInside {
 private:
     MemBuf mb_m;
-    Rcpp::Environment global_env_m;
+    Rcpp::Environment* global_env_m = NULL;
     
     bool verbose_m;							// switch toggled by constructor, or setter
 	bool interactive_m;						// switch set by constructor only
@@ -76,7 +76,7 @@ public:
 
     template <typename T> 
     void assign(const T& object, const std::string& nam) {
-		global_env_m.assign( nam, object ) ;
+		global_env_m->assign( nam, object ) ;
     }
     
     RInside() ;
